# uzbek-talim

./: .env.example  .gitignore  Makefile  README.md  ROLE_MANAGEMENT.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start_bot.sh  start_servers.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: pyproject.toml
apps/api/src/: __init__.py  main.py
apps/api/src/api/: __init__.py
apps/api/src/api/v1/: __init__.py  auth.py  courses.py  groups.py  lessons.py  notifications.py  payments.py  tests.py  users.py
apps/api/src/core/: __init__.py  deps.py  exception_handlers.py  middleware.py  security.py
apps/api/src/repositories/: __init__.py  base.py  course_repository.py  group_repository.py  lesson_repository.py  notification_repository.py  payment_repository.py  test_repository.py  user_repository.py
apps/api/src/schemas/: auth.py  common.py  course.py  group.py  lesson.py  notification.py  payment.py  test.py  user.py
apps/api/src/services/: __init__.py  auth_service.py  course_service.py  group_service.py  lesson_service.py  notification_service.py  payment_service.py  telegram_service.py  test_service.py  test_service_additions.py  user_service.py
apps/api/tests/: conftest.py
apps/bot/: pyproject.toml
apps/bot/src/: __init__.py  main.py
apps/bot/src/filters/: __init__.py  auth.py
apps/bot/src/handlers/: __init__.py  admin.py  auth.py  common.py  student.py
apps/bot/src/keyboards/: __init__.py  admin.py  auth.py  main.py  student.py
apps/bot/src/middlewares/: __init__.py  database.py  logging.py  throttling.py
apps/bot/src/repositories/: __init__.py  user_repository.py
apps/bot/src/services/: __init__.py  user_service.py
apps/bot/src/states/: __init__.py  auth.py
apps/bot/src/utils/: __init__.py  messages.py  validators.py
apps/bot/tests/: __init__.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/public/brand/: README.md
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/web/src/components/auth/: AdminRoute.tsx  AuthProvider.tsx  GuestRoute.tsx  ProtectedRoute.tsx
apps/web/src/components/common/: BrandLogo.tsx  Footer.tsx  Header.tsx
apps/web/src/components/layouts/: AdminLayout.tsx  AuthLayout.tsx  DashboardLayout.tsx  MainLayout.tsx
apps/web/src/components/modals/: PlatformInfoModal.tsx
apps/web/src/pages/: AboutPlatformPage.tsx  CourseDetailPage.tsx  CoursesPage.tsx  DashboardCourseDetailPage.tsx  DashboardCoursesPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  PaymentsPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SchedulePage.tsx  TestDetailPage.tsx  TestResultsPage.tsx  TestsPage.tsx
apps/web/src/pages/admin/: AdminCoursesPage.tsx  AdminDashboard.tsx  AdminPaymentsPage.tsx  AdminSettingsPage.tsx  AdminStatsPage.tsx  AdminUsersPage.tsx
apps/web/src/pages/teacher/: CreateCoursePage.tsx  CreateTestPage.tsx  EditCoursePage.tsx  EditTestPage.tsx  TeacherCoursesPage.tsx  TeacherTestsPage.tsx
apps/web/src/services/: api.ts
apps/web/src/store/: authStore.ts
apps/web/src/styles/: globals.css
infrastructure/docker/: api.Dockerfile  bot.Dockerfile  web.Dockerfile
infrastructure/nginx/: nginx.conf  spa.conf  uzbek-talim.conf
infrastructure/scripts/: init-db.sql
infrastructure/systemd/: uzbek-talim-api.service  uzbek-talim-bot.service  uzbek-talim-web.service
scripts/: README.md  manage_user_role.py  setup-duckdns.sh
tests/integration/: __init__.py  conftest.py
