[project]
name = "bot"
version = "1.0.0"
description = "Telegram bot for Uzbek Ta'lim platform"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aiogram>=3.3.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "shared",
    "db",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

